[gd_scene load_steps=16 format=2]

[ext_resource path="res://_glb/weapons/pistol.glb" type="PackedScene" id=1]
[ext_resource path="res://player/weapons/grav_gun.gd" type="Script" id=2]
[ext_resource path="res://entities/visual/mum_hologram.png" type="Texture" id=3]
[ext_resource path="res://entities/grav_explosion.gd" type="Script" id=4]
[ext_resource path="res://player/weapons/projectile.gd" type="Script" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.1, 0.1, 0.75 )

[sub_resource type="SphereShape" id=2]
radius = 0.114207

[sub_resource type="SphereMesh" id=3]
radius = 0.1
height = 0.2
radial_segments = 12
rings = 8

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 39.88, 19.18, 8.09, 1 )

[sub_resource type="SphereShape" id=14]
resource_local_to_scene = true
radius = 8.0

[sub_resource type="SphereMesh" id=17]
resource_local_to_scene = true
radial_segments = 24
rings = 24

[sub_resource type="Shader" id=9]
code = "shader_type spatial;
render_mode unshaded, cull_disabled, blend_add;

uniform sampler2D main_texture;
uniform vec4 color : hint_color;

void fragment() {
	ALBEDO = texture(main_texture, UV).rgb*color.rgb;
	ALPHA = pow(1.0 - NORMAL.z, 2)*color.a;
}"

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/main_texture = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:shader_param/color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "fire"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:shader_param/color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 2.21914, 1 ),
"update": 0,
"values": [ Color( 6, 6, 6, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.183011, 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 8, 8, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.217638, 1 ),
"update": 0,
"values": [ 0.1, 8.0 ]
}

[node name="grav_gun" type="Spatial"]
script = ExtResource( 2 )

[node name="pistol" parent="." instance=ExtResource( 1 )]

[node name="MeshInstance" type="MeshInstance" parent="pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00479524, 0.114776, 0.180356 )
mesh = SubResource( 1 )
material/0 = null

[node name="launcher" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110581, 0.554223 )

[node name="projectile" type="KinematicBody" parent="launcher"]
collision_layer = 0
collision_mask = 5
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="launcher/projectile"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="launcher/projectile"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="explosion" type="Area" parent="launcher"]
collision_layer = 0
collision_mask = 6
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="launcher/explosion"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="launcher/explosion"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="launcher/explosion"]
anims/RESET = SubResource( 6 )
anims/fire = SubResource( 16 )

[connection signal="contact" from="launcher/projectile" to="." method="_on_projectile_contact"]
[connection signal="disappeared" from="launcher/explosion" to="." method="_on_explosion_disappeared"]
[connection signal="animation_finished" from="launcher/explosion/AnimationPlayer" to="launcher/explosion" method="_on_animation_finished"]
